# pykrx-openapi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pykrx_openapi/: __init__.py  client.py  constants.py  converters.py  exceptions.py  logger.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_client.py  test_converters.py  test_endpoints.py  test_rate_limiter.py
