[project]
name = "pykrx-openapi"
version = "0.1.0"
description = "Python wrapper for KRX (Korea Exchange) OpenAPI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Alan Kim"}
]
license = {text = "MIT"}
keywords = ["krx", "korea exchange", "stock", "finance", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/raccoonyy/pykrx-openapi"
Documentation = "https://github.com/raccoonyy/pykrx-openapi#readme"
Repository = "https://github.com/raccoonyy/pykrx-openapi"
Issues = "https://github.com/raccoonyy/pykrx-openapi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pykrx_openapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/pykrx_openapi --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.coverage.run]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
